Add header section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <!-- new project -->
+
+    <header>
+        <nav>
+            <!-- content -->
+        </nav>
+    </header>
+
 </body>
 </html>
